--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
     "connect-mongo": "^2.0.3",
+    "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.0",
     "express-session": "^1.16.1",
